# Bagley-v7.01

./: .gitignore  ARCHITECTURE.md  DATASETS.md  README.md  SETUP.md  TRAINING_DATASETS.md  pyproject.toml  requirements.txt  setup.bat
bagley/: __init__.py  main.py
bagley/agents/: __init__.py  browser.py  filesystem.py  system.py  vscode.py
bagley/api/: __init__.py  server.py
bagley/core/: __init__.py  anti_hallucination.py  bagley.py  brain.py  consciousness.py  daily_intelligence.py  emotion_system.py  existence_loop.py  hardware_monitor.py  identity.py  infinite_context.py  life_story.py  long_term_memory.py  memory.py  orchestrator.py  personality.py  personality_engine.py  reasoning_engine.py  router.py  web_intelligence.py
bagley/inference/: __init__.py  cache.py  memory.py  optimize.py
bagley/models/: __init__.py  upscaler.py
bagley/models/chat/: __init__.py  config.py  model.py  tokenizer.py
bagley/models/image/: __init__.py  config.py  model.py  pipeline.py  vae.py
bagley/models/model_3d/: __init__.py  generator.py
bagley/models/multimodal/: __init__.py  encoder.py  processor.py
bagley/models/tts/: __init__.py  config.py  model.py  pipeline.py  vocoder.py
bagley/models/video/: __init__.py  audio_generator.py  config.py  infinite_video.py  model.py  pipeline.py  vae.py
bagley/training/: __init__.py  config.py  data.py  distributed.py  flexible_trainer.py  monitor.py  pipeline.py  trainer.py  unified_trainer.py
bagley/ui/: __init__.py  api_server.py  api_tab.py  app.py  app_v2.py  app_v3.py  components.py  hardware_monitor.py  training_components.py
